--- a/localization/ir_l_english.yml
+++ b/localization/ir_l_english.yml
@@ -5,6 +5,7 @@
   building_pottery_mills: Pottery Mills
   building_synthetics_plants: Dye Plants
   building_rayon_plants: Rayon Plants
+  building_automobile_factories: Automobile Factories
   pmg_base_building_distillery_type: Production Type
   pm_rum: Rum
   pm_vodka: Grain Alcohol
