--- a/localization/ir_l_english.yml
+++ b/localization/ir_l_english.yml
@@ -6,6 +6,7 @@
   building_synthetics_plants: Dye Plants
   building_rayon_plants: Rayon Plants
   building_automobile_factories: Automobile Factories
+  building_aircraft_industry: Aircraft Industry
   pmg_base_building_distillery_type: Production Type
   pm_rum: Rum
   pm_vodka: Grain Alcohol
