--- a/localization/ir_l_english.yml
+++ b/localization/ir_l_english.yml
@@ -9,6 +9,7 @@
   building_aircraft_industry: Aircraft Industry
   building_electrics_industry: Telephone Industry
   building_radio_industry: Radio Industry
+  building_fruit_orchard: Fruit Orchard
   pmg_base_building_distillery_type: Production Type
   pm_rum: Rum
   pm_vodka: Grain Alcohol
