--- a/localization/ir_l_english.yml
+++ b/localization/ir_l_english.yml
@@ -12,6 +12,7 @@
   building_fruit_orchard: Fruit Orchard
   building_wool_farms: Wool Farms
   building_hardwood_logging_camps: Hardwood Logging Camps
+  building_synthetic_rubber_plants: Synthetic Rubber Plants
   pmg_base_building_distillery_type: Production Type
   pm_rum: Rum
   pm_vodka: Grain Alcohol
