--- a/localization/l_english.yml
+++ b/localization/l_english.yml
@@ -1,48 +1,63 @@
 ﻿l_english:
-  building_distillery: "Distillery"
-  building_tailoring_workshops: "Tailoring Workshop"
-  building_luxury_furniture_manufacturies: "Luxury Furniture Manufacturies"
-  building_pottery_mills: "Pottery Mills"
-  building_synthetics_plants: "Dye Plants"
-  building_rayon_plants: "Rayon Plants"
-  building_automobile_factories: "Automobile Factories"
-  building_aircraft_industry: "Aircraft Industry"
-  building_electrics_industry: "Telephone Industry"
-  building_radio_industry: "Radio Industry"
-  building_fruit_orchard: "Fruit Orchard"
-  building_wool_farms: "Wool Farms"
-  building_hardwood_logging_camps: "Hardwood Logging Camps"
-  building_synthetic_rubber_plants: "Synthetic Rubber Plants"
-  building_synthetic_fuel_plants: "Synthetic Fuel Plants"
-  pmg_base_building_distillery_type: "Production Type"
-  pm_rum: "Rum"
-  pm_vodka: "Grain Alcohol"
-  pm_hand_shearing: "Hand Shearing"
-  pm_specialized_shears: "Specialized Shears"
-  pm_electric_shears: "Electric Shears"
-  pm_synthetic_rubber: "Synthetic Rubber"
-  pm_fischer_tropsch: "Fischer-Tropsch Process"
-  pm_simple_forestry_hardwood: "$pm_simple_forestry$"
-  pm_saw_mills_hardwood: "$pm_saw_mills$"
-  pm_electric_saw_mills_hardwood: "$pm_electric_saw_mills$"
-  pmg_base_building_distillery: "$pm_base$"
-  building_distillery_throughput_add: "$building_distillery$ building [concept_throughput]"
-  building_distillery_throughput_add_desc: "A bonus or penalty to both input and output of $building_distillery$"
-  building_tailoring_workshop_throughput_add: "$building_tailoring_workshop$ building [concept_throughput]"
-  building_tailoring_workshop_throughput_add_desc: "A bonus or penalty to both input and output of $building_tailoring_workshop$"
-  building_luxury_furniture_manufacturies_throughput_add: "$building_luxury_furniture_manufacturies$ building [concept_throughput]"
-  building_luxury_furniture_manufacturies_throughput_add_desc: "A bonus or penalty to both input and output of $building_luxury_furniture_manufacturies$"
-  building_pottery_mills_throughput_add: "$building_pottery_mills$ building [concept_throughput]"
-  building_pottery_mills_throughput_add_desc: "A bonus or penalty to both input and output of $building_pottery_mills$"
-  building_rayon_plants_throughput_add: "$building_rayon_plants$ building [concept_throughput]"
-  building_rayon_plants_throughput_add_desc: "A bonus or penalty to both input and output of $building_rayon_plants$"
-  building_automobile_factories_throughput_add: "$building_automobile_factories$ building [concept_throughput]"
-  building_automobile_factories_throughput_add_desc: "A bonus or penalty to both input and output of $building_automobile_factories$"
-  building_aircraft_industry_throughput_add: "$building_aircraft_industry$ building [concept_throughput]"
-  building_aircraft_industry_throughput_add_desc: "A bonus or penalty to both input and output of $building_aircraft_industry$"
-  building_radio_industry_throughput_add: "$building_radio_industry$ building [concept_throughput]"
-  building_radio_industry_throughput_add_desc: "A bonus or penalty to both input and output of $building_radio_industry$"
-  building_fruit_orchard_throughput_add: "$building_fruit_orchard$ building [concept_throughput]"
-  building_fruit_orchard_throughput_add_desc: "A bonus or penalty to both input and output of $building_fruit_orchard$"
-  building_wool_farms_throughput_add: "$building_wool_farms$ building [concept_throughput]"
-  building_wool_farms_throughput_add_desc: "A bonus or penalty to both input and output of $building_wool_farms$"
+  building_distillery:1 "Distillery"
+  building_tailoring_workshops:1 "Tailoring Workshop"
+  building_luxury_furniture_manufacturies:1 "Luxury Furniture Manufacturies"
+  building_pottery_mills:1 "Pottery Mills"
+  building_synthetics_plants:1 "Dye Plants"
+  building_rayon_plants:1 "Rayon Plants"
+  building_automobile_factories:1 "Automobile Factories"
+  building_aircraft_industry:1 "Aircraft Industry"
+  building_electrics_industry:1 "Telephone Industry"
+  building_radio_industry:1 "Radio Industry"
+  building_fruit_orchard:1 "Fruit Orchard"
+  building_wool_farms:1 "Wool Farms"
+  building_hardwood_logging_camp:1 "Hardwood Logging Camps"
+  building_synthetic_rubber_plants:1 "Synthetic Rubber Plants"
+  building_synthetic_fuel_plants:1 "Synthetic Fuel Plants"
+  pmg_base_building_distillery_type:1 "Production Type"
+  pm_rum:1 "Rum"
+  pm_vodka:1 "Grain Alcohol"
+  pm_hand_shearing:1 "Hand Shearing"
+  pm_specialized_shears:1 "Specialized Shears"
+  pm_electric_shears:1 "Electric Shears"
+  pm_synthetic_rubber:1 "Synthetic Rubber"
+  pm_fischer_tropsch:1 "Fischer-Tropsch Process"
+  pm_simple_forestry_hardwood:2 "$pm_simple_forestry$"
+  pm_saw_mills_hardwood:2 "$pm_saw_mills$"
+  pm_electric_saw_mills_hardwood:2 "$pm_electric_saw_mills$"
+  pm_simple_farming_orchard:2 "$pm_simple_farming$"
+  pm_soil_enriching_farming_orchard:2 "$pm_soil_enriching_farming$"
+  pm_fertilization_orchard:2 "$pm_fertilization$"
+  pm_chemical_fertilizer_orchard:2 "$pm_chemical_fertilizer$"
+  pm_handsewn_clothes_luxury:2 "$pm_handsewn_clothes$"
+  pm_dye_workshops_luxury:2 "$pm_dye_workshops$"
+  pm_sewing_machines_luxury:2 "$pm_sewing_machines$"
+  pm_electric_sewing_machines_luxury:2 "$pm_electric_sewing_machines$"
+  pm_handcrafted_furniture_luxury:2 "$pm_handcrafted_furniture$"
+  pm_lathe_luxury:2 "$pm_lathe$"
+  pm_mechanized_workshops_luxury:2 "$pm_mechanized_workshops$"
+  pmg_base_building_distillery:2 "$pm_base$"
+  pmg_base_building_fruit_orchard:2 "$pm_base$"
+  pmg_base_building_wool_farms:2 "$pm_base$"
+  pmg_base_building_hardwood_logging_camp:2 "$pm_base$"
+  pmg_harvesting_process_building_orchard:2 "$pmg_harvesting_process$"
+  modifier_building_distillery_throughput_add:2 "$building_distillery$ building [concept_throughput]"
+  modifier_building_distillery_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_distillery$"
+  modifier_building_tailoring_workshop_throughput_add:2 "$building_tailoring_workshop$ building [concept_throughput]"
+  modifier_building_tailoring_workshop_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_tailoring_workshop$"
+  modifier_building_luxury_furniture_manufacturies_throughput_add:2 "$building_luxury_furniture_manufacturies$ building [concept_throughput]"
+  modifier_building_luxury_furniture_manufacturies_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_luxury_furniture_manufacturies$"
+  modifier_building_pottery_mills_throughput_add:2 "$building_pottery_mills$ building [concept_throughput]"
+  modifier_building_pottery_mills_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_pottery_mills$"
+  modifier_building_rayon_plants_throughput_add:2 "$building_rayon_plants$ building [concept_throughput]"
+  modifier_building_rayon_plants_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_rayon_plants$"
+  modifier_building_automobile_factories_throughput_add:2 "$building_automobile_factories$ building [concept_throughput]"
+  modifier_building_automobile_factories_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_automobile_factories$"
+  modifier_building_aircraft_industry_throughput_add:2 "$building_aircraft_industry$ building [concept_throughput]"
+  modifier_building_aircraft_industry_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_aircraft_industry$"
+  modifier_building_radio_industry_throughput_add:2 "$building_radio_industry$ building [concept_throughput]"
+  modifier_building_radio_industry_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_radio_industry$"
+  modifier_building_fruit_orchard_throughput_add:2 "$building_fruit_orchard$ building [concept_throughput]"
+  modifier_building_fruit_orchard_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_fruit_orchard$"
+  modifier_building_wool_farms_throughput_add:2 "$building_wool_farms$ building [concept_throughput]"
+  modifier_building_wool_farms_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_wool_farms$"
