Fix issues with ownership methods

--- a/localization/l_english.yml
+++ b/localization/l_english.yml
@@ -12,7 +12,22 @@
   building_hardwood_logging_camp:1 "Hardwood Logging Camps"
   building_synthetic_rubber_plants:1 "Synthetic Rubber Plants"
   building_synthetic_fuel_plants:1 "Synthetic Fuel Plants"
-  pmg_base_building_distillery_type:1 "Production Type"
+  pm_merchant_guilds_building_hardwood_logging_camp:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_hardwood_logging_camp:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_hardwood_logging_camp:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_hardwood_logging_camp:1 "$pm_worker_cooperative$"
+  pm_merchant_guilds_building_tailoring_workshops:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_tailoring_workshops:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_tailoring_workshops:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_tailoring_workshops:1 "$pm_worker_cooperative$"
+  pm_merchant_guilds_building_luxury_furniture_manufacturies:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_luxury_furniture_manufacturies:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_luxury_furniture_manufacturies:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_luxury_furniture_manufacturies:1 "$pm_worker_cooperative$"
+  pm_merchant_guilds_building_pottery_mills:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_pottery_mills:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_pottery_mills:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_pottery_mills:1 "$pm_worker_cooperative$"
   pm_rum:1 "Rum"
   pm_vodka:1 "Grain Alcohol"
   pm_hand_shearing:1 "Hand Shearing"
@@ -38,10 +53,15 @@
   pmg_base_building_fruit_orchard:2 "$pm_base$"
   pmg_base_building_wool_farms:2 "$pm_base$"
   pmg_base_building_hardwood_logging_camp:2 "$pm_base$"
+  pmg_base_building_distillery_type:1 "$pm_base$"
   pmg_harvesting_process_building_orchard:2 "$pmg_harvesting_process$"
   pmg_synthetic_rubber:2 "$pm_base$"
   pmg_synthetic_fuel:2 "$pm_base$"
-  pmg_automation_building_automobile_factories:2 "$pmg_automation_building_motor_industry$"
+  pmg_automation_building_automobile_factories:2 "$pmg_automation_building_motor_industry$"  
+  pmg_ownership_capital_building_tailoring_workshops:1 "$pmg_ownership$"
+  pmg_ownership_capital_building_luxury_furniture_manufacturies:1 "$pmg_ownership$"
+  pmg_ownership_capital_building_pottery_mills:1 "$pmg_ownership$"
+  pmg_ownership_capital_building_hardwood_logging_camp:1 "$pmg_ownership$"
   modifier_building_distillery_throughput_add:2 "$building_distillery$ building [concept_throughput]"
   modifier_building_distillery_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_distillery$"
   modifier_building_tailoring_workshop_throughput_add:2 "$building_tailoring_workshop$ building [concept_throughput]"
