Fix distillery ownership

--- a/localization/l_english.yml
+++ b/localization/l_english.yml
@@ -28,6 +28,10 @@
   pm_privately_owned_building_pottery_mills:1 "$pm_privately_owned$"
   pm_publicly_traded_building_pottery_mills:1 "$pm_publicly_traded$"
   pm_worker_cooperative_building_pottery_mills:1 "$pm_worker_cooperative$"
+  pm_merchant_guilds_building_distillery:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_distillery:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_distillery:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_distillery:1 "$pm_worker_cooperative$"
   pm_rum:1 "Rum"
   pm_vodka:1 "Grain Alcohol"
   pm_hand_shearing:1 "Hand Shearing"
@@ -62,6 +66,7 @@
   pmg_ownership_capital_building_luxury_furniture_manufacturies:1 "$pmg_ownership$"
   pmg_ownership_capital_building_pottery_mills:1 "$pmg_ownership$"
   pmg_ownership_capital_building_hardwood_logging_camp:1 "$pmg_ownership$"
+  pmg_ownership_capital_building_distillery:1 "$pmg_ownership$"
   modifier_building_distillery_throughput_add:2 "$building_distillery$ building [concept_throughput]"
   modifier_building_distillery_throughput_add_desc:2 "A bonus or penalty to both input and output of $building_distillery$"
   modifier_building_tailoring_workshop_throughput_add:2 "$building_tailoring_workshop$ building [concept_throughput]"
