Add AI translations

--- a/localization/l_english.yml
+++ b/localization/l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
   building_distillery:1 "Distillery"
   building_tailoring_workshops:1 "Tailoring Workshop"
-  building_luxury_furniture_manufacturies:1 "Luxury Furniture Manufacturies"
+  building_luxury_furniture_manufacturies:1 "Luxury Furniture Manufactories"
   building_pottery_mills:1 "Pottery Mills"
   building_rayon_plants:1 "Rayon Plants"
   building_automobile_factories:1 "Automobile Factories"
@@ -12,6 +12,13 @@
   building_hardwood_logging_camp:1 "Hardwood Logging Camps"
   building_synthetic_rubber_plants:1 "Synthetic Rubber Plants"
   building_synthetic_fuel_plants:1 "Synthetic Fuel Plants"
+  pm_rum:1 "Rum"
+  pm_vodka:1 "Grain Alcohol"
+  pm_hand_shearing:1 "Hand Shearing"
+  pm_specialized_shears:1 "Specialized Shears"
+  pm_electric_shears:1 "Electric Shears"
+  pm_synthetic_rubber:1 "Synthetic Rubber"
+  pm_fischer_tropsch:1 "Fischer-Tropsch Process"
   pm_merchant_guilds_building_hardwood_logging_camp:1 "$pm_merchant_guilds$"
   pm_privately_owned_building_hardwood_logging_camp:1 "$pm_privately_owned$"
   pm_publicly_traded_building_hardwood_logging_camp:1 "$pm_publicly_traded$"
@@ -32,13 +39,6 @@
   pm_privately_owned_building_distillery:1 "$pm_privately_owned$"
   pm_publicly_traded_building_distillery:1 "$pm_publicly_traded$"
   pm_worker_cooperative_building_distillery:1 "$pm_worker_cooperative$"
-  pm_rum:1 "Rum"
-  pm_vodka:1 "Grain Alcohol"
-  pm_hand_shearing:1 "Hand Shearing"
-  pm_specialized_shears:1 "Specialized Shears"
-  pm_electric_shears:1 "Electric Shears"
-  pm_synthetic_rubber:1 "Synthetic Rubber"
-  pm_fischer_tropsch:1 "Fischer-Tropsch Process"
   pm_simple_forestry_hardwood:2 "$pm_simple_forestry$"
   pm_saw_mills_hardwood:2 "$pm_saw_mills$"
   pm_electric_saw_mills_hardwood:2 "$pm_electric_saw_mills$"
@@ -61,7 +61,7 @@
   pmg_harvesting_process_building_orchard:2 "$pmg_harvesting_process$"
   pmg_synthetic_rubber:2 "$pm_base$"
   pmg_synthetic_fuel:2 "$pm_base$"
-  pmg_automation_building_automobile_factories:2 "$pmg_automation_building_motor_industry$"  
+  pmg_automation_building_automobile_factories:2 "$pmg_automation_building_motor_industry$"
   pmg_ownership_capital_building_tailoring_workshops:1 "$pmg_ownership$"
   pmg_ownership_capital_building_luxury_furniture_manufacturies:1 "$pmg_ownership$"
   pmg_ownership_capital_building_pottery_mills:1 "$pmg_ownership$"
