--- a/localization/l_polish.yml
+++ b/localization/l_polish.yml
@@ -1,1 +1,89 @@
 ﻿l_polish:
+  building_distillery:1 "Destylarnia"
+  building_tailoring_workshops:1 "Warsztat eleganckich ubrań"
+  building_luxury_furniture_manufacturies:1 "Manufaktury Mebli Luksusowych"
+  building_pottery_mills:1 "Fabryki Ceramiki"
+  building_rayon_plants:1 "Zakłady Rayonowe"
+  building_automobile_factories:1 "Fabryki Samochodów"
+  building_aircraft_industry:1 "Przemysł lotniczy"
+  building_radio_industry:1 "Przemysł radiowy"
+  building_fruit_orchard:1 "Sad owocowy"
+  building_wool_farms:1 "Farma Wełny"
+  building_hardwood_logging_camp:1 "Obozy Wydobycia Twardego Drewna"
+  building_synthetic_rubber_plants:1 "Fabryki Gumy Syntetycznej"
+  building_synthetic_fuel_plants:1 "Fabryki Paliw Syntetycznych"
+  pm_rum:1 "Rum"
+  pm_vodka:1 "Alkohol z Zboża"
+  pm_hand_shearing:1 "Strzyżenie Ręczne"
+  pm_specialized_shears:1 "Specjalistyczne Nożyczki"
+  pm_electric_shears:1 "Nożyczki Elektryczne"
+  pm_synthetic_rubber:1 "Guma Syntetyczna"
+  pm_fischer_tropsch:1 "Proces Fischer-Tropsch"
+  pm_merchant_guilds_building_hardwood_logging_camp:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_hardwood_logging_camp:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_hardwood_logging_camp:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_hardwood_logging_camp:1 "$pm_worker_cooperative$"
+  pm_merchant_guilds_building_tailoring_workshops:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_tailoring_workshops:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_tailoring_workshops:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_tailoring_workshops:1 "$pm_worker_cooperative$"
+  pm_merchant_guilds_building_luxury_furniture_manufacturies:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_luxury_furniture_manufacturies:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_luxury_furniture_manufacturies:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_luxury_furniture_manufacturies:1 "$pm_worker_cooperative$"
+  pm_merchant_guilds_building_pottery_mills:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_pottery_mills:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_pottery_mills:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_pottery_mills:1 "$pm_worker_cooperative$"
+  pm_merchant_guilds_building_distillery:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_distillery:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_distillery:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_distillery:1 "$pm_worker_cooperative$"
+  pm_simple_forestry_hardwood:2 "$pm_simple_forestry$"
+  pm_saw_mills_hardwood:2 "$pm_saw_mills$"
+  pm_electric_saw_mills_hardwood:2 "$pm_electric_saw_mills$"
+  pm_simple_farming_orchard:2 "$pm_simple_farming$"
+  pm_soil_enriching_farming_orchard:2 "$pm_soil_enriching_farming$"
+  pm_fertilization_orchard:2 "$pm_fertilization$"
+  pm_chemical_fertilizer_orchard:2 "$pm_chemical_fertilizer$"
+  pm_handsewn_clothes_luxury:2 "$pm_handsewn_clothes$"
+  pm_dye_workshops_luxury:2 "$pm_dye_workshops$"
+  pm_sewing_machines_luxury:2 "$pm_sewing_machines$"
+  pm_electric_sewing_machines_luxury:2 "$pm_electric_sewing_machines$"
+  pm_handcrafted_furniture_luxury:2 "$pm_handcrafted_furniture$"
+  pm_lathe_luxury:2 "$pm_lathe$"
+  pm_mechanized_workshops_luxury:2 "$pm_mechanized_workshops$"
+  pmg_base_building_distillery:2 "$pm_base$"
+  pmg_base_building_fruit_orchard:2 "$pm_base$"
+  pmg_base_building_wool_farms:2 "$pm_base$"
+  pmg_base_building_hardwood_logging_camp:2 "$pm_base$"
+  pmg_base_building_distillery_type:1 "$pm_base$"
+  pmg_harvesting_process_building_orchard:2 "$pmg_harvesting_process$"
+  pmg_synthetic_rubber:2 "$pm_base$"
+  pmg_synthetic_fuel:2 "$pm_base$"
+  pmg_automation_building_automobile_factories:2 "$pmg_automation_building_motor_industry$"
+  pmg_ownership_capital_building_tailoring_workshops:1 "$pmg_ownership$"
+  pmg_ownership_capital_building_luxury_furniture_manufacturies:1 "$pmg_ownership$"
+  pmg_ownership_capital_building_pottery_mills:1 "$pmg_ownership$"
+  pmg_ownership_capital_building_hardwood_logging_camp:1 "$pmg_ownership$"
+  pmg_ownership_capital_building_distillery:1 "$pmg_ownership$"
+  modifier_building_distillery_throughput_add:2 "$building_distillery$ – [concept_throughput|l]"
+  modifier_building_distillery_throughput_add_desc:2 $building_distillery$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
+  modifier_building_tailoring_workshop_throughput_add:2 "$building_tailoring_workshop$ – [concept_throughput|l]"
+  modifier_building_tailoring_workshop_throughput_add_desc:2 $building_tailoring_workshop$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
+  modifier_building_luxury_furniture_manufacturies_throughput_add:2 "$building_luxury_furniture_manufacturies$ – [concept_throughput|l]"
+  modifier_building_luxury_furniture_manufacturies_throughput_add_desc:2 $building_luxury_furniture_manufacturies$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
+  modifier_building_pottery_mills_throughput_add:2 "$building_pottery_mills$ – [concept_throughput|l]"
+  modifier_building_pottery_mills_throughput_add_desc:2 $building_pottery_mills$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
+  modifier_building_rayon_plants_throughput_add:2 "$building_rayon_plants$ – [concept_throughput|l]"
+  modifier_building_rayon_plants_throughput_add_desc:2 $building_rayon_plants$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
+  modifier_building_automobile_factories_throughput_add:2 "$building_automobile_factories$ – [concept_throughput|l]"
+  modifier_building_automobile_factories_throughput_add_desc:2 $building_automobile_factories$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
+  modifier_building_aircraft_industry_throughput_add:2 "$building_aircraft_industry$ – [concept_throughput|l]"
+  modifier_building_aircraft_industry_throughput_add_desc:2 $building_aircraft_industry$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
+  modifier_building_radio_industry_throughput_add:2 "$building_radio_industry$ – [concept_throughput|l]"
+  modifier_building_radio_industry_throughput_add_desc:2 $building_radio_industry$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
+  modifier_building_fruit_orchard_throughput_add:2 "$building_fruit_orchard$ – [concept_throughput|l]"
+  modifier_building_fruit_orchard_throughput_add_desc:2 $building_fruit_orchard$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
+  modifier_building_wool_farms_throughput_add:2 "$building_wool_farms$ – [concept_throughput|l]"
+  modifier_building_wool_farms_throughput_add_desc:2 $building_wool_farms$ – premia lub kara wpływająca na produkcję oraz wykorzystanie towarów"
