--- a/localization/l_braz_por.yml
+++ b/localization/l_braz_por.yml
@@ -1,1 +1,89 @@
 ﻿l_braz_por:
+  building_distillery:1 "Destilaria"
+  building_tailoring_workshops:1 "Oficina de Roupas de Alta Qualidade"
+  building_luxury_furniture_manufacturies:1 "Manufaturas de Móveis de Luxo"
+  building_pottery_mills:1 "Fábricas de Cerâmica"
+  building_rayon_plants:1 "Fábricas de Rayon"
+  building_automobile_factories:1 "Fábricas de Automóveis"
+  building_aircraft_industry:1 "Indústria Aeronáutica"
+  building_radio_industry:1 "Indústria de Rádio"
+  building_fruit_orchard:1 "Pomar de Frutas"
+  building_wool_farms:1 "Fazendas de Lã"
+  building_hardwood_logging_camp:1 "Acampamentos de Exploração de Madeira de Lei"
+  building_synthetic_rubber_plants:1 "Fábricas de Borracha Sintética"
+  building_synthetic_fuel_plants:1 "Fábricas de Combustível Sintético"
+  pm_rum:1 "Rum"
+  pm_vodka:1 "Álcool de Cereais"
+  pm_hand_shearing:1 "Tosquia Manual"
+  pm_specialized_shears:1 "Tesouras Especializadas"
+  pm_electric_shears:1 "Tesouras Elétricas"
+  pm_synthetic_rubber:1 "Borracha Sintética"
+  pm_fischer_tropsch:1 "Processo Fischer-Tropsch"
+  pm_merchant_guilds_building_hardwood_logging_camp:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_hardwood_logging_camp:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_hardwood_logging_camp:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_hardwood_logging_camp:1 "$pm_worker_cooperative$"
+  pm_merchant_guilds_building_tailoring_workshops:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_tailoring_workshops:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_tailoring_workshops:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_tailoring_workshops:1 "$pm_worker_cooperative$"
+  pm_merchant_guilds_building_luxury_furniture_manufacturies:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_luxury_furniture_manufacturies:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_luxury_furniture_manufacturies:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_luxury_furniture_manufacturies:1 "$pm_worker_cooperative$"
+  pm_merchant_guilds_building_pottery_mills:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_pottery_mills:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_pottery_mills:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_pottery_mills:1 "$pm_worker_cooperative$"
+  pm_merchant_guilds_building_distillery:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_distillery:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_distillery:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_distillery:1 "$pm_worker_cooperative$"
+  pm_simple_forestry_hardwood:2 "$pm_simple_forestry$"
+  pm_saw_mills_hardwood:2 "$pm_saw_mills$"
+  pm_electric_saw_mills_hardwood:2 "$pm_electric_saw_mills$"
+  pm_simple_farming_orchard:2 "$pm_simple_farming$"
+  pm_soil_enriching_farming_orchard:2 "$pm_soil_enriching_farming$"
+  pm_fertilization_orchard:2 "$pm_fertilization$"
+  pm_chemical_fertilizer_orchard:2 "$pm_chemical_fertilizer$"
+  pm_handsewn_clothes_luxury:2 "$pm_handsewn_clothes$"
+  pm_dye_workshops_luxury:2 "$pm_dye_workshops$"
+  pm_sewing_machines_luxury:2 "$pm_sewing_machines$"
+  pm_electric_sewing_machines_luxury:2 "$pm_electric_sewing_machines$"
+  pm_handcrafted_furniture_luxury:2 "$pm_handcrafted_furniture$"
+  pm_lathe_luxury:2 "$pm_lathe$"
+  pm_mechanized_workshops_luxury:2 "$pm_mechanized_workshops$"
+  pmg_base_building_distillery:2 "$pm_base$"
+  pmg_base_building_fruit_orchard:2 "$pm_base$"
+  pmg_base_building_wool_farms:2 "$pm_base$"
+  pmg_base_building_hardwood_logging_camp:2 "$pm_base$"
+  pmg_base_building_distillery_type:1 "$pm_base$"
+  pmg_harvesting_process_building_orchard:2 "$pmg_harvesting_process$"
+  pmg_synthetic_rubber:2 "$pm_base$"
+  pmg_synthetic_fuel:2 "$pm_base$"
+  pmg_automation_building_automobile_factories:2 "$pmg_automation_building_motor_industry$"
+  pmg_ownership_capital_building_tailoring_workshops:1 "$pmg_ownership$"
+  pmg_ownership_capital_building_luxury_furniture_manufacturies:1 "$pmg_ownership$"
+  pmg_ownership_capital_building_pottery_mills:1 "$pmg_ownership$"
+  pmg_ownership_capital_building_hardwood_logging_camp:1 "$pmg_ownership$"
+  pmg_ownership_capital_building_distillery:1 "$pmg_ownership$"
+  modifier_building_distillery_throughput_add:2 "[concept_throughput] de $building_distillery$"
+  modifier_building_distillery_throughput_add_desc:2 "Bônus ou penalidade à produção e insumo de $building_distillery$"
+  modifier_building_tailoring_workshop_throughput_add:2 "[concept_throughput] de $building_tailoring_workshop$"
+  modifier_building_tailoring_workshop_throughput_add_desc:2 "Bônus ou penalidade à produção e insumo de $building_tailoring_workshop$"
+  modifier_building_luxury_furniture_manufacturies_throughput_add:2 "[concept_throughput] de $building_luxury_furniture_manufacturies$"
+  modifier_building_luxury_furniture_manufacturies_throughput_add_desc:2 "Bônus ou penalidade à produção e insumo de $building_luxury_furniture_manufacturies$"
+  modifier_building_pottery_mills_throughput_add:2 "[concept_throughput] de $building_pottery_mills$"
+  modifier_building_pottery_mills_throughput_add_desc:2 "Bônus ou penalidade à produção e insumo de $building_pottery_mills$"
+  modifier_building_rayon_plants_throughput_add:2 "[concept_throughput] de $building_rayon_plants$"
+  modifier_building_rayon_plants_throughput_add_desc:2 "Bônus ou penalidade à produção e insumo de $building_rayon_plants$"
+  modifier_building_automobile_factories_throughput_add:2 "[concept_throughput] de $building_automobile_factories$"
+  modifier_building_automobile_factories_throughput_add_desc:2 "Bônus ou penalidade à produção e insumo de $building_automobile_factories$"
+  modifier_building_aircraft_industry_throughput_add:2 "[concept_throughput] de $building_aircraft_industry$"
+  modifier_building_aircraft_industry_throughput_add_desc:2 "Bônus ou penalidade à produção e insumo de $building_aircraft_industry$"
+  modifier_building_radio_industry_throughput_add:2 "[concept_throughput] de $building_radio_industry$"
+  modifier_building_radio_industry_throughput_add_desc:2 "Bônus ou penalidade à produção e insumo de $building_radio_industry$"
+  modifier_building_fruit_orchard_throughput_add:2 "[concept_throughput] de $building_fruit_orchard$"
+  modifier_building_fruit_orchard_throughput_add_desc:2 "Bônus ou penalidade à produção e insumo de $building_fruit_orchard$"
+  modifier_building_wool_farms_throughput_add:2 "[concept_throughput] de $building_wool_farms$"
+  modifier_building_wool_farms_throughput_add_desc:2 "Bônus ou penalidade à produção e insumo de $building_wool_farms$"
