--- a/localization/l_korean.yml
+++ b/localization/l_korean.yml
@@ -1,1 +1,89 @@
 ﻿l_korean:
+  building_distillery:1 "증류소"
+  building_tailoring_workshops:1 "고급 의류 공방"
+  building_luxury_furniture_manufacturies:1 "고급 가구 제조 공장"
+  building_pottery_mills:1 "도기 공장"
+  building_rayon_plants:1 "레이온 공장"
+  building_automobile_factories:1 "자동차 공장"
+  building_aircraft_industry:1 "항공 산업"
+  building_radio_industry:1 "라디오 산업"
+  building_fruit_orchard:1 "과수원"
+  building_wool_farms:1 "양털 농장"
+  building_hardwood_logging_camp:1 "단단한 나무 벌목 캠프"
+  building_synthetic_rubber_plants:1 "합성 고무 공장"
+  building_synthetic_fuel_plants:1 "합성 연료 공장"
+  pm_rum:1 "럼"
+  pm_vodka:1 "곡물 주정"
+  pm_hand_shearing:1 "손으로 깎는 것"
+  pm_specialized_shears:1 "전문 가위"
+  pm_electric_shears:1 "전기 가위"
+  pm_synthetic_rubber:1 "합성 고무"
+  pm_fischer_tropsch:1 "피셔-트롭쉬 공정"
+  pm_merchant_guilds_building_hardwood_logging_camp:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_hardwood_logging_camp:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_hardwood_logging_camp:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_hardwood_logging_camp:1 "$pm_worker_cooperative$"
+  pm_merchant_guilds_building_tailoring_workshops:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_tailoring_workshops:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_tailoring_workshops:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_tailoring_workshops:1 "$pm_worker_cooperative$"
+  pm_merchant_guilds_building_luxury_furniture_manufacturies:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_luxury_furniture_manufacturies:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_luxury_furniture_manufacturies:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_luxury_furniture_manufacturies:1 "$pm_worker_cooperative$"
+  pm_merchant_guilds_building_pottery_mills:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_pottery_mills:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_pottery_mills:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_pottery_mills:1 "$pm_worker_cooperative$"
+  pm_merchant_guilds_building_distillery:1 "$pm_merchant_guilds$"
+  pm_privately_owned_building_distillery:1 "$pm_privately_owned$"
+  pm_publicly_traded_building_distillery:1 "$pm_publicly_traded$"
+  pm_worker_cooperative_building_distillery:1 "$pm_worker_cooperative$"
+  pm_simple_forestry_hardwood:2 "$pm_simple_forestry$"
+  pm_saw_mills_hardwood:2 "$pm_saw_mills$"
+  pm_electric_saw_mills_hardwood:2 "$pm_electric_saw_mills$"
+  pm_simple_farming_orchard:2 "$pm_simple_farming$"
+  pm_soil_enriching_farming_orchard:2 "$pm_soil_enriching_farming$"
+  pm_fertilization_orchard:2 "$pm_fertilization$"
+  pm_chemical_fertilizer_orchard:2 "$pm_chemical_fertilizer$"
+  pm_handsewn_clothes_luxury:2 "$pm_handsewn_clothes$"
+  pm_dye_workshops_luxury:2 "$pm_dye_workshops$"
+  pm_sewing_machines_luxury:2 "$pm_sewing_machines$"
+  pm_electric_sewing_machines_luxury:2 "$pm_electric_sewing_machines$"
+  pm_handcrafted_furniture_luxury:2 "$pm_handcrafted_furniture$"
+  pm_lathe_luxury:2 "$pm_lathe$"
+  pm_mechanized_workshops_luxury:2 "$pm_mechanized_workshops$"
+  pmg_base_building_distillery:2 "$pm_base$"
+  pmg_base_building_fruit_orchard:2 "$pm_base$"
+  pmg_base_building_wool_farms:2 "$pm_base$"
+  pmg_base_building_hardwood_logging_camp:2 "$pm_base$"
+  pmg_base_building_distillery_type:1 "$pm_base$"
+  pmg_harvesting_process_building_orchard:2 "$pmg_harvesting_process$"
+  pmg_synthetic_rubber:2 "$pm_base$"
+  pmg_synthetic_fuel:2 "$pm_base$"
+  pmg_automation_building_automobile_factories:2 "$pmg_automation_building_motor_industry$"
+  pmg_ownership_capital_building_tailoring_workshops:1 "$pmg_ownership$"
+  pmg_ownership_capital_building_luxury_furniture_manufacturies:1 "$pmg_ownership$"
+  pmg_ownership_capital_building_pottery_mills:1 "$pmg_ownership$"
+  pmg_ownership_capital_building_hardwood_logging_camp:1 "$pmg_ownership$"
+  pmg_ownership_capital_building_distillery:1 "$pmg_ownership$"
+  modifier_building_distillery_throughput_add:2 "$building_distillery$ [concept_throughput]"
+  modifier_building_distillery_throughput_add_desc:2 "$building_distillery$의 투입량과 산출량에 대한 보너스 또는 불이익"
+  modifier_building_tailoring_workshop_throughput_add:2 "$building_tailoring_workshop$ [concept_throughput]"
+  modifier_building_tailoring_workshop_throughput_add_desc:2 "$building_tailoring_workshop$의 투입량과 산출량에 대한 보너스 또는 불이익"
+  modifier_building_luxury_furniture_manufacturies_throughput_add:2 "$building_luxury_furniture_manufacturies$ [concept_throughput]"
+  modifier_building_luxury_furniture_manufacturies_throughput_add_desc:2 "$building_luxury_furniture_manufacturies$의 투입량과 산출량에 대한 보너스 또는 불이익"
+  modifier_building_pottery_mills_throughput_add:2 "$building_pottery_mills$ [concept_throughput]"
+  modifier_building_pottery_mills_throughput_add_desc:2 "$building_pottery_mills$의 투입량과 산출량에 대한 보너스 또는 불이익"
+  modifier_building_rayon_plants_throughput_add:2 "$building_rayon_plants$ [concept_throughput]"
+  modifier_building_rayon_plants_throughput_add_desc:2 "$building_rayon_plants$의 투입량과 산출량에 대한 보너스 또는 불이익"
+  modifier_building_automobile_factories_throughput_add:2 "$building_automobile_factories$ [concept_throughput]"
+  modifier_building_automobile_factories_throughput_add_desc:2 "$building_automobile_factories$의 투입량과 산출량에 대한 보너스 또는 불이익"
+  modifier_building_aircraft_industry_throughput_add:2 "$building_aircraft_industry$ [concept_throughput]"
+  modifier_building_aircraft_industry_throughput_add_desc:2 "$building_aircraft_industry$의 투입량과 산출량에 대한 보너스 또는 불이익"
+  modifier_building_radio_industry_throughput_add:2 "$building_radio_industry$ [concept_throughput]"
+  modifier_building_radio_industry_throughput_add_desc:2 "$building_radio_industry$의 투입량과 산출량에 대한 보너스 또는 불이익"
+  modifier_building_fruit_orchard_throughput_add:2 "$building_fruit_orchard$ [concept_throughput]"
+  modifier_building_fruit_orchard_throughput_add_desc:2 "$building_fruit_orchard$의 투입량과 산출량에 대한 보너스 또는 불이익"
+  modifier_building_wool_farms_throughput_add:2 "$building_wool_farms$ [concept_throughput]"
+  modifier_building_wool_farms_throughput_add_desc:2 "$building_wool_farms$의 투입량과 산출량에 대한 보너스 또는 불이익"
